--- a/.themes/classic/sass/base/_layout.scss
+++ b/.themes/classic/sass/base/_layout.scss
@@ -139,9 +139,9 @@ body.sidebar-footer {
   }
   #content {
     overflow: visible;
-    margin-right: $sidebar-width-medium;
+    margin-left: $sidebar-width-medium;
     position: relative;
-    .no-sidebar & { margin-right: 0; border-right: 0; }
+    .no-sidebar & { margin-left: 0; border-right: 0; }
     .collapse-sidebar & { margin-right: 20px; }
     > div, > article {
       padding-top: $pad-medium/2;
@@ -168,7 +168,7 @@ body.sidebar-footer {
 
 @media only screen and (min-width: 992px) {
   body > header { font-size: $header-font-size * 1.3; }
-  #content { margin-right: $sidebar-width-wide; }
+  #content { margin-left: $sidebar-width-wide; }
   #content {
     > div, > article {
       padding-top: $pad-wide/2;
