--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -1,4 +1,4 @@
-$max-width: 1200px !default;
+$max-width: auto !default;
 
 // Padding used for layout margins
 $pad-min: 18px !default;
@@ -10,7 +10,7 @@ $pad-wide: 55px !default;
 $sidebar-width-medium: 240px !default;
 $sidebar-pad-medium: 15px !default;
 $sidebar-pad-wide: 20px !default;
-$sidebar-width-wide: 300px !default;
+$sidebar-width-wide: 260px !default;
 
 $indented-lists: false !default;
 
@@ -42,12 +42,18 @@ $header-padding-bottom: 1.5em !default;
     }
   }
 }
-
+html {
+  height: 100%;
+}
 body {
+  height: 100%;
   -webkit-text-size-adjust: none;
   max-width: $max-width;
   position: relative;
   margin: 0 auto;
+  #main, #content {
+    min-height: 100%;
+  }
   > header, > nav, > footer, #content > article, #content > div > article, #content > div > section {
     @extend .group;
     padding-left: $pad-min;
@@ -139,9 +145,10 @@ body.sidebar-footer {
   }
   #content {
     overflow: visible;
-    margin-right: $sidebar-width-medium;
+    margin-left: $sidebar-width-medium;
+    border-left: #dedede 1px solid;
     position: relative;
-    .no-sidebar & { margin-right: 0; border-right: 0; }
+    .no-sidebar & { margin-left: 0; border-right: 0; }
     .collapse-sidebar & { margin-right: 20px; }
     > div, > article {
       padding-top: $pad-medium/2;
@@ -155,7 +162,8 @@ body.sidebar-footer {
     background: none;
     clear: none;
     float: left;
-    margin: 0 -100% 0 0;
+    margin: 0;
+    margin-left: -$sidebar-width-medium;
     section {
       width: auto; margin-left: 0;
       &.odd, &.even { float: none; width: auto; margin-left: 0; }
@@ -168,7 +176,7 @@ body.sidebar-footer {
 
 @media only screen and (min-width: 992px) {
   body > header { font-size: $header-font-size * 1.3; }
-  #content { margin-right: $sidebar-width-wide; }
+  #content { margin-left: $sidebar-width-wide; }
   #content {
     > div, > article {
       padding-top: $pad-wide/2;
@@ -177,6 +185,7 @@ body.sidebar-footer {
   }
   aside.sidebar {
     width: $sidebar-width-wide - $sidebar-pad-wide*2;
+    margin-left: -$sidebar-width-wide;
     padding: 1.2em $sidebar-pad-wide $sidebar-pad-wide;
     .collapse-sidebar & {
       padding: { left: $pad-wide; right: $pad-wide; }
