--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,19 @@
 <section>
-  <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <a href="/"><img src="/images/me.jpg" style="border-radius: 300px;
+width: 50%;
+margin: auto;
+display: block;
+box-shadow: 0 0 0px 1px #fff,0 0 10px 0px rgba(0,0,0,0.6);
+border-width: 1px;max-height: 100px;
+max-width: 100px;"></a>
+  <h1 style="border-bottom: 0;
+box-shadow: none;margin-top:20px">Folke Lemaitre</h1>
+  <p>Information addict, Geek and Dad.<br>CEO &amp; Founder of <a href="http://www.engagor.com">Engagor</a>
+	  <div class="social">
+  		<a class="twitter" href="http://twitter.com/folke" title="Twitter">Twitter</a>
+  		<a class="linkedin" href="http://www.linkedin.com/in/folkelemaitre" title="GitHub">LinkedIn</a>
+  		<a class="google" href="https://plus.google.com/117557748092999253950?rel=author" title="Google+">Google+</a>
+  		<a class="rss" href="/atom.xml" title="RSS">RSS</a>
+  	  </div>
+  	</p>
 </section>
