--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,11 +1,11 @@
 <section>
   <a href="/"><img src="/images/me.jpg" style="border-radius: 300px;
-width: 50%;
+width: 100px;
+height: 100px;
 margin: auto;
 display: block;
 box-shadow: 0 0 0px 1px #fff,0 0 10px 0px rgba(0,0,0,0.6);
-border-width: 1px;max-height: 100px;
-max-width: 100px;"></a>
+border-width: 1px;"></a>
   <h1 style="border-bottom: 0;
 box-shadow: none;margin-top:20px">Folke Lemaitre</h1>
   <p>Information addict, Geek and Dad.<br>CEO &amp; Founder of <a href="http://www.engagor.com">Engagor</a>
